Late night tweaks

--- a/secrets.py.example
+++ b/secrets.py.example
@@ -9,6 +9,7 @@ secrets = {
     "mqtt_password": "<MQTT-Broker-Password>",
     "matrix_bit_depth": "<Matrix-Bit-Depth>", # 2-6
     "matrix_color_order": "<Matrix-Color-Order", # RGB, RBG
-    "ntp_enable": "<Enable-NTP>",
+    "ntp_enable": <Enable-NTP>,
     "ntp_interval": "<NTP-Update-Interval>", # seconds
+    "debug": <Debug-Mode>,
 }
