--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-adafruit_lis3dh==5.1.19
-neopixel==6.3.6
-simpleio==3.0.8
-adafruit_bitmap_font==1.5.11
-adafruit_display_text==2.22.12
-adafruit_io==5.6.12
-adafruit_matrixportal==3.0.10
-adafruit_minimqtt==6.0.1
-asyncio==0.5.17
-cedargrove_palettefader==1.1.0
+adafruit_lis3dh
+neopixel
+simpleio
+adafruit_bitmap_font
+adafruit_display_text
+adafruit_io
+adafruit_matrixportal
+adafruit_minimqtt
+asyncio
+cedargrove_palettefader
